# aoc2022

./: .gitignore  Cargo.toml  rustfmt.toml
src/: main.rs
src/days/: eight.rs  five.rs  four.rs  mod.rs  one.rs  seven.rs  six.rs  three.rs  two.rs
