[package]
name = "aoc_2022"
version = "0.1.0"
edition = "2021"
authors = ["Dustin Ryan-Roepsch"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
itertools = "0.10"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
